# netball

./: .gitignore  test_hoop_detection.py
.bmad-core/: install-manifest.yaml
.cursor/rules/bmad/: analyst.mdc  architect.mdc  bmad-master.mdc  bmad-orchestrator.mdc  dev.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc  ux-expert.mdc
netball_analysis/: README.md  SPRINT_7_SUMMARY.md  SPRINT_8_SUMMARY.md  debug_ocr.py  improved_ocr_analyzer.py  pyproject.toml  run_bib_analysis.py  run_calibrated_analysis.py  run_calibrated_analysis_fixed.py  run_calibrated_ocr_analysis.py  run_final_analysis.py  run_focused_ocr_analysis.py  start_api.py  start_web.py  streamlit.out  test_auto_calibration.py  test_calibration_minimal.py  test_calibration_video.py  test_enhanced_calibration.py  test_enhanced_detector.py  test_jersey_numbers.py  test_ocr.py  test_ocr_comprehensive.py  test_simple_calibration.py
netball_analysis/.streamlit/: config.toml
netball_analysis/api/: __init__.py  analysis_service.py  app.py  background_processor.py  file_manager.py  job_manager.py  models.py  response_formatter.py
netball_analysis/app/: __init__.py  api.py  workers.py
netball_analysis/core/: __init__.py  analytics.py  ball_tracker.py  bbox_stabilizer.py  bib_integration.py  bib_ocr.py  court.py  detection.py  enhanced_detector.py  homography.py  io_utils.py  jersey_ocr.py  jersey_tracker.py  logging_utils.py  ocr_integration.py  ocr_types.py  possession_tracker.py  shooting_analysis.py  shooting_analyzer.py  standings.py  team_id.py  tracking.py  types.py  viz.py  zones.py
netball_analysis/core/calibration/: __init__.py  auto_workflow.py  calibrator.py  enhanced_calibrator.py  integration.py  transformer.py  types.py  zones.py
netball_analysis/core/performance/: __init__.py  batch_processor.py  database_optimizer.py  detection_cache.py  gpu_accelerator.py  memory_optimizer.py  parallel_processor.py  performance_monitor.py  threaded_processor.py
netball_analysis/docs/: API_DOCUMENTATION.md  architecture_court_calibration.md  prd.md  prd_court_calibration.md  prd_enhanced.md  prd_ocr_jersey_reading.md  to-fix-later.md
netball_analysis/docs/sprints/: SPRINT_10_PERFORMANCE_OPTIMIZATION.md  SPRINT_10_SUMMARY.md
netball_analysis/docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md  1.7.story.md  1.8.story.md  1.9.story.md  sprint3_possession_analytics.md  sprint3_possession_overlay.md  sprint3_possession_tuning.md  sprint3_possession_validation.md
netball_analysis/models/: .gitkeep
netball_analysis/scripts/: analyze_ball_detection.py  analyze_video.py  calibrate_homography.py  create_testing_suite.py  diagnose_ball_detection.py  draw_overlays.py  enhance_zone_violations.py  evaluate_slice.py  export_csv.py  generate_analytics_dashboard.py  generate_validation_report.py  improve_error_handling.py  improve_player_detection.py  improve_shooting_analysis.py  manual_possession_review.py  optimize_detection.py  optimize_performance.py  refine_calibration.py  run_calibrated_analysis.py  run_combined_segment.py  run_local.py  run_numbers_segment.py  run_positions_segment.py  standings.py  test_api.py  test_api_simple.py  test_batch_processing.py  test_database_optimization.py  test_detection_cache.py  test_gpu_acceleration.py  test_improved_detection.py  test_memory_optimization.py  test_parallel_processing.py  test_performance_monitoring.py  test_real_performance.py  test_threaded_processing.py  test_zone_violations.py  train_models.py  validate_possession.py  validate_setup.py
netball_analysis/tests/: __init__.py  test_homography.py  test_possession.py  test_shooting.py  test_standings.py  test_zones.py
netball_analysis/web/: enhanced_streamlit_app.py  streamlit_app.py
netball_analysis/web/static/: .gitkeep
netball_analysis/web/templates/: .gitkeep
